@@ -1,5 +1,13 @@
 2006-10-01  Al Riddoch  <alriddoch@zepler.org>
 
+	* PythonCallback_impl.h, PythonCallback.cpp, PythonCallback.h:
+	  Add templates for handling callback arguments.
+
+	* eris_account.cpp: Implement createCharacter, and add more callbacks
+	  with argument support this time.
+
+2006-10-01  Al Riddoch  <alriddoch@zepler.org>
+
 	* eris_account.cpp: Start wrapping a bunch more methods.
 
 2006-10-01  Al Riddoch  <alriddoch@zepler.org>
